# POJECT

./: Dockerfile  README.md  pyproject.toml  pytest.ini  ragas_score.csv  score.csv
.github/workflows/: cicd.yaml
notebook/: trial_research.ipynb
scripts/: health_check.py  ingest_data.py
src/poject/: main.py  main_ingest.py  trials.ipynb
src/poject/api/: app.py  routes.py
src/poject/config/: __init__.py  settings.py
src/poject/ingestion_data/: ingestion.py  storage.py
src/poject/models/: chat_request.py
src/poject/prompts/: sys_prompt.py
src/poject/services/: embeddings.py  llm_service.py  rag_pipeline.py  storage.py  vector_store.py
src/poject/templates/: index.html
src/poject/utils/: logger.py
tests/: conftest.py
tests/integration/: test_rag_pipeline_integ.py  test_routes.py
tests/ragas_eval/: eval_ragas.py  test_eval_ragas.py
tests/unit/: test_embeddings.py  test_llm_service.py  test_rag_pipeline.py  test_storage.py  test_vector_store.py
