[project]
name = "poject"
version = "0.1.0"
description = "End-to-End Medical RAG Chatbot | Automated Testing & CI/CD with GitHub Actions + AWS"
authors = [
    {name = "Israe KHOUI",email = "israekhoui9@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "langchain (==0.3.26)",
    "flask (==3.1.1)",
    "sentence-transformers (==4.1.0)",
    "pypdf (==5.6.1)",
    "python-dotenv (==1.1.0)",
    "langchain-pinecone (==0.2.8)",
    "langchain-openai (==0.3.24)",
    "langchain-community (==0.3.26)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "boto3 (>=1.40.37,<2.0.0)"
]

[tool.poetry]
packages = [{include = "poject", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "requests-mock (>=1.12.1,<2.0.0)",
    "moto (>=5.1.13,<6.0.0)",
    "pytest-flask (>=1.3.0,<2.0.0)"
]
